# m

./: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CppProperties.json  m-config.cmake.in  usage  vcpkg-configuration.json  vcpkg.json
src/Windows/: CMakeLists.txt
src/Windows/Docs/: Readme.md
src/Windows/libraries/: CMakeLists.txt
src/Windows/libraries/debugging/: CMakeLists.txt
src/Windows/libraries/errors/: CMakeLists.txt
src/Windows/libraries/formatters/: CMakeLists.txt
src/Windows/libraries/multi_byte/: CMakeLists.txt
src/Windows/libraries/windows_strings/: CMakeLists.txt
src/include/m/: CMakeLists.txt  version.h.in
src/include/m/type_traits/: type_traits.h
src/include/m/utility/: locked.h  make_span.h  pointers.h  utility.h  zstring.h
src/libraries/: CMakeLists.txt
src/libraries/block_buffer/: CMakeLists.txt
src/libraries/block_buffer/include/: CMakeLists.txt
src/libraries/block_buffer/src/: CMakeLists.txt
src/libraries/block_buffer/test/: CMakeLists.txt
src/libraries/byte_streams/: CMakeLists.txt
src/libraries/byte_streams/include/: CMakeLists.txt
src/libraries/byte_streams/src/: CMakeLists.txt  byte_streams.cpp  memory_stream.cpp  memory_stream.h
src/libraries/cast/: CMakeLists.txt
src/libraries/cast/include/: CMakeLists.txt
src/libraries/cast/src/: CMakeLists.txt  cast.cpp
src/libraries/cast/test/: CMakeLists.txt  test_cast.cpp  test_try_cast.cpp  to.cpp
src/libraries/command_options/: CMakeLists.txt
src/libraries/command_options/include/: CMakeLists.txt
src/libraries/command_options/src/: CMakeLists.txt  command_options.cpp
src/libraries/command_options/test/: CMakeLists.txt
src/libraries/csv/: CMakeLists.txt
src/libraries/csv/include/: CMakeLists.txt
src/libraries/csv/src/: CMakeLists.txt  breaker.cpp  csv.cpp
src/libraries/csv/test/: CMakeLists.txt  test_field_quoter.cpp  test_row_writer.cpp
src/libraries/debugging/: CMakeLists.txt
src/libraries/debugging/include/: CMakeLists.txt
src/libraries/debugging/src/: CMakeLists.txt  dbg_format.cpp
src/libraries/filesystem/: CMakeLists.txt
src/libraries/filesystem/include/: CMakeLists.txt
src/libraries/filesystem/src/: CMakeLists.txt  file.cpp  file.h  filesystem.cpp  loadstore.cpp  make_path.cpp  monitor.cpp  monitor.h  path_conversions.cpp  seekable_input_file.cpp  seekable_input_file.h  seekable_output_file.cpp  seekable_output_file.h  windows_loadstore.cpp
src/libraries/filesystem/test/: CMakeLists.txt  exercise_monitor.cpp  exercise_path_casts.cpp  exercise_path_formatting.cpp  exercise_store.cpp  stress_monitor.cpp
src/libraries/googletest/: CMakeLists.txt
src/libraries/googletest/include/: CMakeLists.txt
src/libraries/googletest/src/: CMakeLists.txt  temporary_directory_impl.cpp  temporary_directory_impl.h  temporary_directory_manager.cpp
src/libraries/googletest/test/: CMakeLists.txt  exercise_temporary_directory.cpp
src/libraries/io/: CMakeLists.txt
src/libraries/io/include/: CMakeLists.txt
src/libraries/io/src/: CMakeLists.txt  io.cpp
src/libraries/math/: CMakeLists.txt
src/libraries/math/include/: CMakeLists.txt
src/libraries/math/src/: CMakeLists.txt  math.cpp
src/libraries/math/test/: CMakeLists.txt  add_unsigned_signed_to_unsigned.cpp  add_unsigned_unsigned_to_unsigned.cpp  exercise_negation.cpp  safe_integers_addition_functor.cpp
src/libraries/memory/: CMakeLists.txt
src/libraries/memory/include/: CMakeLists.txt
src/libraries/memory/src/: CMakeLists.txt  memory.cpp
src/libraries/memory/test/: CMakeLists.txt
src/libraries/pe/: CMakeLists.txt
src/libraries/pe/doc/: CMakeLists.txt
src/libraries/pe/include/: CMakeLists.txt
src/libraries/pe/src/: CMakeLists.txt  loader.cpp  loader_context.cpp  pe_decoder.cpp  pe_record.cpp  reference.cpp
src/libraries/pe/test/: CMakeLists.txt  helloworld.h  not_a_pe.txt  small_test_pe.h  small_test_pe.pe  test_pe.cpp
src/libraries/pil/: CMakeLists.txt
src/libraries/pil/include/: CMakeLists.txt
src/libraries/pil/src/: CMakeLists.txt  registry_base_types.cpp  registry_key.cpp  registry_passthrough.cpp  registry_passthrough.h
src/libraries/pil/test/: CMakeLists.txt
src/libraries/rfc3339_clock/: CMakeLists.txt
src/libraries/rfc3339_clock/include/: CMakeLists.txt
src/libraries/rfc3339_clock/src/: CMakeLists.txt  rfc3339_clock.cpp
src/libraries/rfc3339_clock/test/: CMakeLists.txt  exercise_clock.cpp
src/libraries/rust-ffi-helpers/: CMakeLists.txt
src/libraries/rust-ffi-helpers/include/: CMakeLists.txt
src/libraries/rust-ffi-helpers/src/: CMakeLists.txt  arc_ptr.cpp
src/libraries/rust-ffi-helpers/test/: CMakeLists.txt  test_arc_ptr.cpp  test_string_in.cpp
src/libraries/strings/: CMakeLists.txt
src/libraries/strings/doc/: CMakeLists.txt
src/libraries/strings/include/: CMakeLists.txt
src/libraries/strings/src/: CMakeLists.txt  convert.cpp  punning.cpp
src/libraries/strings/test/: CMakeLists.txt  punning_test.cpp  test_convert.cpp  test_data.h  test_literal_string_view.cpp  verify_to_string.cpp  verify_to_u16string.cpp  verify_to_u32string.cpp  verify_to_u8string.cpp
src/libraries/thread_description/: CMakeLists.txt
src/libraries/thread_description/include/: CMakeLists.txt
src/libraries/thread_description/src/: CMakeLists.txt
src/libraries/thread_description/test/: CMakeLists.txt  test_thread_description.cpp
src/libraries/threadpool/: CMakeLists.txt
src/libraries/threadpool/include/: CMakeLists.txt
src/libraries/threadpool/src/: CMakeLists.txt
src/libraries/threadpool/test/: CMakeLists.txt  test_timer.cpp
src/libraries/tracing/: CMakeLists.txt
src/libraries/tracing/include/: CMakeLists.txt
src/libraries/tracing/src/: CMakeLists.txt  channel.cpp  cout_sink.cpp  envelope.cpp  event_context.cpp  message.cpp  message_queue.cpp  monitor_class.cpp  multiplexor.cpp  sink.cpp  source.cpp
src/libraries/tracing/test/: CMakeLists.txt  exercise_tracing.cpp
src/libraries/utf/: CMakeLists.txt
src/libraries/utf/include/: CMakeLists.txt
src/libraries/utf/src/: CMakeLists.txt  decode_utf16.cpp  decode_utf32.cpp  (+3 more)
(+193 files in other folders)
