cmake_minimum_required(VERSION 3.23)

add_subdirectory(block_buffer)
add_subdirectory(byte_streams)
add_subdirectory(cast)
add_subdirectory(command_options)
add_subdirectory(csv)
add_subdirectory(filesystem)
add_subdirectory(io)
add_subdirectory(math)
add_subdirectory(memory)
add_subdirectory(pe)
add_subdirectory(rfc3339_clock)
add_subdirectory(rust-ffi-helpers)
add_subdirectory(strings)
add_subdirectory(tracing)
add_subdirectory(utf)

set(m_installation_targets ${m_installation_targets} PARENT_SCOPE)
